--- a/packages/typespec-azure-resource-manager/package.json
+++ b/packages/typespec-azure-resource-manager/package.json
@@ -28,6 +28,10 @@
     "./testing": {
       "types": "./dist/src/testing/index.d.ts",
       "default": "./dist/src/testing/index.js"
+    },
+    "./common-types/": {
+      "typespec": "./lib/common-types/*",
+      "default": "./dist/src/index.js"
     }
   },
   "type": "module",
