--- a/packages/typespec-azure-resource-manager-common-types/tsconfig.json
+++ b/packages/typespec-azure-resource-manager-common-types/tsconfig.json
@@ -9,12 +9,11 @@
     { "path": "../typespec-azure-core/tsconfig.json" },
     { "path": "../typespec-azure-resource-manager/tsconfig.json" },
     { "path": "../typespec-autorest/tsconfig.json" }
-
   ],
   "compilerOptions": {
     "outDir": "dist",
     "rootDir": ".",
     "tsBuildInfoFile": "temp/tsconfig.tsbuildinfo"
   },
-  "include": ["src/*.ts"],
+  "include": ["src/*.ts"]
 }
