--- a/packages/typespec-azure-vscode/package.json
+++ b/packages/typespec-azure-vscode/package.json
@@ -84,14 +84,14 @@
     "@types/node": "~22.13.11",
     "@typescript-eslint/eslint-plugin": "^8.31.1",
     "@typescript-eslint/parser": "^8.31.1",
-    "eslint": "^9.25.1",
-    "typescript": "^5.8.3",
     "@vscode/test-cli": "^0.0.10",
     "@vscode/test-electron": "^2.5.2",
     "@vscode/vsce": "~3.3.0",
-    "prettier": "^3.3.3",
     "esbuild": "^0.25.1",
-    "mocha": "^11.1.0"
+    "eslint": "^9.25.1",
+    "mocha": "^11.1.0",
+    "prettier": "^3.3.3",
+    "typescript": "^5.8.3"
   }
 }
 
