set the activate event

--- a/packages/typespec-azure-vscode/package.json
+++ b/packages/typespec-azure-vscode/package.json
@@ -18,7 +18,8 @@
     "Other"
   ],
   "activationEvents": [
-    "onStartupFinished"
+    "onLanguage:typespec",
+    "workspaceContains:**/tspconfig.yaml"
   ],
   "main": "./dist/src/extension.cjs",
   "contributes": {
