--- a/packages/typespec-azure-vscode/tsconfig.json
+++ b/packages/typespec-azure-vscode/tsconfig.json
@@ -13,5 +13,5 @@
     "skipLibCheck": true,
     "rootDir": "."
   },
-  "exclude": ["dist", "templates", "vitest.config.ts"]
+  "exclude": ["dist"]
 }
