reuse base tsconfig

--- a/packages/typespec-azure-vscode/tsconfig.json
+++ b/packages/typespec-azure-vscode/tsconfig.json
@@ -1,17 +1,3 @@
 {
-  "extends": "../../core/tsconfig.base.json",
-  "compilerOptions": {
-    "incremental": false,
-    "composite": false,
-    "module": "ESNext",
-    "target": "ES2022",
-    "moduleResolution": "bundler",
-    "sourceMap": false,
-    "resolveJsonModule": true,
-    "noEmitOnError": true,
-    "outDir": "dist",
-    "skipLibCheck": true,
-    "rootDir": "."
-  },
-  "exclude": ["dist"]
+  "extends": "../../core/tsconfig.base.json"
 }
