--- a/.chronus/config.yaml
+++ b/.chronus/config.yaml
@@ -41,6 +41,7 @@ versionPolicies:
       - "@azure-tools/typespec-azure-portal-core"
       - "@azure-tools/typespec-azure-resource-manager"
       - "@azure-tools/typespec-client-generator-core"
+      - "typespec-azure-vscode"
 
 changelog: ["@chronus/github/changelog", { repo: "azure/typespec-azure" }]
 
