--- a/package.json
+++ b/package.json
@@ -78,6 +78,9 @@
   "pnpm": {
     "onlyBuiltDependencies": [
       "tree-sitter"
-    ]
+    ],
+    "overrides": {
+      "cross-spawn@>=7.0.0 <7.0.5": "^7.0.5"
+    }
   }
 }
