init Typespec azure vscode package (#2738)
init typespec-azure-vscode package.
typespec-azure-vscode package is to develop a vscode extension for
typespec azure.

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -212,6 +212,13 @@
       "smartStep": true,
       "sourceMaps": true,
       "skipFiles": ["<node_internals>/**/*.js"]
+    },
+    {
+      "name": "Run typespec azure Extension",
+      "type": "extensionHost",
+      "request": "launch",
+      "args": ["--extensionDevelopmentPath=${workspaceFolder}/packages/typespec-azure-vscode"],
+      "sourceMaps": true
     }
   ],
   "compounds": [
