--- a/package.json
+++ b/package.json
@@ -77,6 +77,11 @@
   },
   "pnpm": {
     "onlyBuiltDependencies": [
+      "@playwright/browser-chromium",
+      "@vscode/vsce-sign",
+      "autorest",
+      "esbuild",
+      "sharp",
       "tree-sitter"
     ],
     "overrides": {
