--- a/eng/feeds/__snapshots__/azure-core/tspconfig.yaml
+++ b/eng/feeds/__snapshots__/azure-core/tspconfig.yaml
@@ -21,6 +21,7 @@ options:
     model-namespace: false
   "@azure-tools/typespec-ts":
     package-dir: "azure-contoso-rest"
+    is-modular-library: false
     package-details:
       name: "@azure-rest/azure-contoso"
       description: "Azure.Contoso Service"
