--- a/.github/workflows/consistency.yml
+++ b/.github/workflows/consistency.yml
@@ -97,8 +97,8 @@ jobs:
         name: Lint
 
   # Check version mismatch
-  version-consitency:
-    name: Versions consitency
+  version-consistency:
+    name: Versions consistency
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
