--- a/.github/workflows/external-integration.yml
+++ b/.github/workflows/external-integration.yml
@@ -73,6 +73,7 @@ jobs:
         working-directory: azure-rest-api-specs
 
       - name: Check for git changes
+        if: success() || failure() # Still run this step even if validation fails to ensure as much information as possible
         run: |
           git_changes=$(git status --porcelain)
           if [ -n "$git_changes" ]; then
@@ -84,9 +85,3 @@ jobs:
             echo "✅ No git changes detected"
           fi
         working-directory: azure-rest-api-specs
-
-      - name: Fail job if TypeSpec validation failed
-        if: steps.validation.outcome == 'failure'
-        run: |
-          echo "❌ TypeSpec validation failed. Check the validation step output for details."
-          exit 1
