--- a/packages/typespec-azure-core/tsconfig.json
+++ b/packages/typespec-azure-core/tsconfig.json
@@ -9,6 +9,7 @@
   "compilerOptions": {
     "outDir": "dist",
     "rootDir": ".",
+    // "verbatimModuleSyntax": true,
     "tsBuildInfoFile": "temp/tsconfig.tsbuildinfo"
   },
   "include": ["src/**/*.ts", "generated-defs/**/*.ts", "test/**/*.ts"]
