--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -60,5 +60,5 @@
   "typespec.tsp-server.path": "${workspaceRoot}/core/packages/compiler",
   "cSpell.words": ["autorest", "typespec"],
   "dotnet.defaultSolution": "disable",
-  "eslint.experimental.useFlatConfig": true // Still needed new version coming soon should work without https://github.com/microsoft/vscode-eslint/issues/1644
+  "eslint.useFlatConfig": true
 }
