--- a/package.json
+++ b/package.json
@@ -26,8 +26,8 @@
     "purge": "rimraf --glob \"packages/*/node_modules/\" --glob \"core/packages/*/node_modules/\"",
     "regen-docs": "pnpm run-all  --parallel --aggregate-output --reporter=append-only run regen-docs",
     "regen-samples": "pnpm run-all run regen-samples",
-    "test": "vitest run --workspace ./vitest.workspace.fast.ts",
-    "test:ci": "vitest run --workspace ./vitest.workspace.fast.ts --coverage --reporter=junit --reporter=default",
+    "test": "vitest run --config ./vitest.config.fast.ts",
+    "test:ci": "vitest run --config ./vitest.config.fast.ts --coverage --reporter=junit --reporter=default",
     "test:e2e": "pnpm run-azure-only run test:e2e",
     "update-playground-versions": "pnpm run-all run update-playground-versions",
     "watch": "tsc --build ./tsconfig.ws.json --watch",
