--- a/eng/tsconfig.json
+++ b/eng/tsconfig.json
@@ -1,7 +1,8 @@
 {
   "extends": "../core/tsconfig.base.json",
   "compilerOptions": {
-    "noEmit": true
+    "noEmit": true,
+    "allowJs": true
   },
   "include": ["**/*"]
 }
