--- a/tsconfig.eng.json
+++ b/tsconfig.eng.json
@@ -1,5 +1,9 @@
 {
   "extends": "./core/tsconfig.base.json",
+  "compilerOptions": {
+    "allowJs": true,
+    "checkJs": false,
+  },
   "include": ["./eng", "./core/eng"],
   "exclude": ["./core/eng/vitest.config.ts"]
 }
