--- a/tsconfig.ws.json
+++ b/tsconfig.ws.json
@@ -8,6 +8,7 @@
     { "path": "packages/typespec-client-generator-core/tsconfig.json" },
     { "path": "packages/typespec-azure-rulesets/tsconfig.json" },
     { "path": "packages/azure-http-specs/tsconfig.json" },
+    { "path": "packages/integration-tester/tsconfig.json" },
     { "path": "packages/samples/tsconfig.json" }
   ],
   "files": []
