--- a/packages/integration-tester/package.json
+++ b/packages/integration-tester/package.json
@@ -26,6 +26,7 @@
   },
   "dependencies": {
     "execa": "^9.5.2",
+    "ora": "^8.1.1",
     "pathe": "^2.0.3",
     "picocolors": "~1.1.1",
     "yaml": "~2.8.0"
