--- a/packages/integration-tester/package.json
+++ b/packages/integration-tester/package.json
@@ -25,6 +25,7 @@
     "test:watch": "vitest -w"
   },
   "dependencies": {
+    "@pnpm/workspace.find-packages": "^1000.0.24",
     "execa": "^9.5.2",
     "ora": "^8.1.1",
     "pathe": "^2.0.3",
