faster update only

--- a/packages/integration-tester/config/integration-test-config.yaml
+++ b/packages/integration-tester/config/integration-test-config.yaml
@@ -1,6 +1,6 @@
 suites:
   azure-specs:
-    # repo: https://github.com/Azure/azure-rest-api-specs
-    # branch: typespec-next
-    repo: https://github.com/Azure/autorest.python
-    branch: main
+    repo: https://github.com/Azure/azure-rest-api-specs
+    branch: typespec-next
+    # repo: https://github.com/Azure/autorest.python
+    # branch: main
