--- a/packages/typespec-client-generator-core/package.json
+++ b/packages/typespec-client-generator-core/package.json
@@ -64,6 +64,7 @@
     "@typespec/compiler": "workspace:^",
     "@typespec/events": "workspace:^",
     "@typespec/http": "workspace:^",
+    "@typespec/http-client": "workspace:^",
     "@typespec/openapi": "workspace:^",
     "@typespec/rest": "workspace:^",
     "@typespec/sse": "workspace:^",
@@ -77,6 +78,7 @@
     "@types/node": "~24.1.0",
     "@types/pluralize": "^0.0.33",
     "@typespec/compiler": "workspace:^",
+    "@typespec/http-client": "workspace:^",
     "@typespec/events": "workspace:^",
     "@typespec/http": "workspace:^",
     "@typespec/library-linter": "workspace:^",
