--- a/packages/integration-tester/config/integration-test-config.yaml
+++ b/packages/integration-tester/config/integration-test-config.yaml
@@ -4,5 +4,8 @@ suites:
     branch: typespec-next
     pattern: "specification/**/tspconfig.yaml"
     entrypoints: ["client.tsp", "main.tsp"]
-    # repo: https://github.com/Azure/autorest.python
-    # branch: main
+  azure-specs-pr:
+    repo: https://github.com/Azure/azure-rest-api-specs-pr
+    branch: typespec-next
+    pattern: "specification/**/tspconfig.yaml"
+    entrypoints: ["client.tsp", "main.tsp"]
